--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -154,7 +154,7 @@
           </div>
           <div class="row d-flex justify-content-between align-items-center w-100">
             <div class="col-md-auto col order-md-2 order-2 " *ngIf="service.confrereLabel">
-              <div class="fs-sm text-body-secondary">{{service.confrereLabel}}</div>
+              <div class="fs-sm text-body-secondary">'Annonce publiée sur ' + {{service.confrereLabel}}</div>
               <!-- TODO : ajouter le lien vers le SPEL jss ou autre-->
             </div>
           </div>
