--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -26,7 +26,7 @@
             <div class="dropdown-menu dropdown-menu-end my-1 custom-drop" [ngClass]="{ show: dropdownOpen }">
               <a class="dropdown-item" (click)="openMyJssRouteUrl('quotation/identification')">
                 <i class="fs-lg opacity-70 me-2 ai-circle-plus"></i>
-                Nouvelle commande
+                Nouvelle demande
               </a>
               <h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Tableau de
                 bord</h6>
