trying to finish the BE feature for MyJSS but but in the back end

--- a/client-myjss/src/app/modules/quotation/components/beneficial-owner-form/beneficial-owner-form.component.html
+++ b/client-myjss/src/app/modules/quotation/components/beneficial-owner-form/beneficial-owner-form.component.html
@@ -330,7 +330,7 @@
     </div>
   </div>
 </div>
-<div class="row justify-content-end g-3">
+<div class="row justify-content-center g-3 mt-4">
   <div class="col-auto">
     <a class="btn btn-secondary" (click)="addBeneficialOwner()"><i class="ai-circle-plus me-2"></i>Ajouter
       un bénéficiare effectif</a>
