--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -12,6 +12,11 @@
       <i class="ai-trash ms-n1 me-2"></i>
       Abandonner
     </a>
+    <a class="btn btn-sm btn-primary" role="button" (click)="openNewQuotationValidationModal()"
+      *ngIf=" quotation && quotation.quotationStatus.code == QUOTATION_STATUS_SENT_TO_CUSTOMER && !quotation.responsable?.tiers?.isProvisionalPaymentMandatory">
+      <i class="ai-check ms-n1 me-2"></i>
+      Valider le devis
+    </a>
   </div>
 </div>
 <div class="alert alert-info d-flex mb-2" role="alert"
@@ -531,6 +536,22 @@
       <button type="button" class="btn btn-secondary" (click)="modal.dismiss()">Annuler</button>
       <button type="button" class="btn btn-danger ms-2"
         (click)="finalCancelDraft($event );$event.stopPropagation();modal.dismiss()">Abandonner</button>
+    </div>
+  </div>
+</ng-template>
+
+<ng-template #validateNewQuotationModal let-modal>
+  <div>
+    <div class="modal-header">
+      <h5 class="modal-title" id="validateNewQuotationModal">Validation du devis</h5>
+      <button type="button" class="btn-close" (click)="modal.dismiss()" aria-label="Fermer"></button>
+    </div>
+    <div class="modal-body">Souhaitez-vous valider ce devis ?
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" (click)="modal.dismiss()">Annuler</button>
+      <button type="button" class="btn btn-danger ms-2"
+        (click)="sendQuotationValidation($event );$event.stopPropagation();modal.dismiss()">Confirmer</button>
     </div>
   </div>
 </ng-template>
