added new feature

--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -158,6 +158,22 @@
               </form>
             </div>
           </div>
+          <!-- Kiosk -->
+          <div class="card text-white p-3 mb-3 position-relative overflow-hidden">
+            <img src="assets/images/homepage/background_kiosque.png" class="position-absolute top-0 start-0 w-100 h-100"
+              alt="Background">
+            <div class="row d-flex align-items-center position-relative z-1">
+              <img src="assets/images/homepage/man-reading.png" alt="Reader" class="col-auto">
+              <div class="col">
+                <h3 class="fw-bold text-white">Le kiosque</h3>
+                <p class="">Retrouvez les archives du Journal Spécial des Sociétés.</p>
+              </div>
+            </div>
+            <div class="row z-1 mt-2">
+              <button class="col btn btn-light-blue" routerLink="/kiosk">Accéder aux archives</button>
+            </div>
+          </div>
+
 
           <!-- Ile-de-france -->
           <div *ngIf="idf" class="mb-3 border border-light card">
