--- a/client-jss/src/app/main/components/post-category-header/post-category-header.component.html
+++ b/client-jss/src/app/main/components/post-category-header/post-category-header.component.html
@@ -9,7 +9,7 @@
               <div class="d-flex align-items-center gap-3 flex-wrap">
                 <h3 class="section-widget-title m-0">{{selectedJssCategory.name}}</h3>
                 <button type="button" class="btn btn-outline-dark" *ngIf="currentUser"
-                  (click)="isFollowed ? unfollowAuthor() : followAuthor()"> <i class="bi"
+                  (click)="isFollowed ? unfollowJssCategory() : followJssCategory()"> <i class="bi"
                     [ngClass]="isFollowed ? 'bi-dash-lg' : 'bi-plus-lg'"></i>
                   {{ isFollowed ? 'Ne plus suivre' : 'Suivre' }}</button>
               </div>
