--- a/client-myjss/src/app/modules/my-account/components/bookmarks/bookmarks.component.html
+++ b/client-myjss/src/app/modules/my-account/components/bookmarks/bookmarks.component.html
@@ -1,5 +1,10 @@
 <section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4 my-4">
   <div class="card-body">
+    <div class="mb-3 ps-sm-3">
+      <button class="btn gray-color" (click)="goBack()">
+        <i class="bi bi-arrow-left gray-color"></i> Retour
+      </button>
+    </div>
     <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
       <i class="bi-bookmark-fill text-dark rounded-circle lead pe-1 me-2"></i>
       <h2 class="h4 mb-0">Liste de lecture {{readingFolder?readingFolder.label:''}} </h2>
