--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -556,7 +556,7 @@
           </div>
           <div class="d-flex align-items-center fs-sm text-dark pb-1 mb-2">
             <span class="ms-2">
-              <h6>Total TTC</h6>
+              <h6>Prix estimatif</h6>
             </span>
             <span class="ms-auto">
               <h6>{{invoiceSummary.totalPrice| currency:'EUR' }}</h6>
