--- a/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
@@ -172,7 +172,7 @@
 
                         <!-- Prix -->
                         <div class="mt-2 mt-sm-0 ps-sm-3 text-sm-end text-start" *ngIf="service.serviceTotalPrice">
-                          <div class="fs-sm text-body-secondary mb-1">Total</div>
+                          <div class="fs-sm text-body-secondary mb-1">Prix estimatif</div>
                           <div class="fs-sm fw-medium text-dark">
                             {{ service.serviceTotalPrice | currency:'EUR' }}
                           </div>
