--- a/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
+++ b/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
@@ -32,7 +32,7 @@
   <div *ngIf="quotation.serviceFamilyGroup && selectedQuotationType">
     <div class="quotation-container" *ngFor="let asso of quotation.assoAffaireOrders; let indexAsso = index">
       <div class="row d-flex align-items-center pb-md-3 m-0" (click)=" openPanel(indexAsso)" style="cursor: pointer;">
-        <div class="col-auto p-0">
+        <div class="col-auto p-0" *ngIf="!quotation || !quotation.id">
           <button type="button" class="btn btn-icon btn-outline-secondary rounded-4" aria-label="Delete"
             (click)="deleteAffaire(indexAsso)">
             <i class="ai-trash "></i>
