--- a/client-myjss/src/app/modules/tools/components/post/post.component.html
+++ b/client-myjss/src/app/modules/tools/components/post/post.component.html
@@ -31,12 +31,18 @@
       <!-- Post title + post meta -->
       <h1 class="pb-2 pb-lg-3">{{post.titleText}}</h1>
       <div class="d-flex flex-wrap align-items-center justify-content-between border-bottom mb-4">
-        <div class="d-flex align-items-center mb-4 me-4">
+        <div class="d-flex align-items-start mb-4 me-4">
           <span class="fs-sm me-2">Par :</span>
-          <div class="position-relative fw-semibold p-0" data-scroll data-scroll-offset="80">
-            {{post.fullAuthor.name}}
-            <span class="d-block position-absolute start-0 bottom-0 w-100"
-              style="background-color: currentColor; height: 1px;"></span>
+          <div class="d-flex flex-column">
+            <div class="position-relative fw-semibold p-0" data-scroll data-scroll-offset="80">
+              {{post.fullAuthor.name}}
+              <span class="d-block position-absolute start-0 bottom-0 w-100"
+                style="background-color: currentColor; height: 1px;"></span>
+            </div>
+            <div>
+              <span>{{post.date | date:'EEEE d MMMM HH:mm'}} - </span>
+              <span>{{getTimeReading(post.contentText)}}</span>
+            </div>
           </div>
         </div>
         <div class="d-flex align-items-center mb-4">
