--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -53,7 +53,7 @@
             </a>
             <div class="card-body pb-4">
               <div class="d-flex align-items-center mb-4 mt-n1">
-                <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
+                <span class="fs-sm text-body-secondary">{{post.date | date:'dd/MM/yyyy'}}</span>
                 <span class="fs-xs opacity-20 mx-3">|</span>
                 <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]"
                   (click)="openTagSearch(post.postTags[0].slug, $event)">{{post.postTags[0].name}}</a>
@@ -112,7 +112,7 @@
           </a>
           <div class="card-body pb-4">
             <div class="d-flex align-items-center mb-4 mt-n1">
-              <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
+              <span class="fs-sm text-body-secondary">{{post.date | date:'dd/MM/yyyy'}}</span>
               <span class="fs-xs opacity-20 mx-3">|</span>
               <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]"
                 (click)="openTagSearch(post.postTags[0].slug, $event)">{{post.postTags[0].name}}</a>
@@ -172,7 +172,7 @@
             </a>
             <div class="card-body pb-4">
               <div class="d-flex align-items-center mb-4 mt-n1">
-                <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
+                <span class="fs-sm text-body-secondary">{{post.date | date:'dd/MM/yyyy'}}</span>
                 <span class="fs-xs opacity-20 mx-3">|</span>
                 <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]"
                   (click)="openTagSearch(post.postTags[0].slug, $event)">{{post.postTags[0].name}}</a>
