First commit with first version of front

--- a/client-osiris/src/app/modules/main/components/topbar/topbar.component.html
+++ b/client-osiris/src/app/modules/main/components/topbar/topbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid topbar-menu">
     <div class="d-flex align-items-center gap-2">
       <!-- Sidebar Menu Toggle Button -->
-      <button (click)="toggleSidebar()" class="sidenav-toggle-button btn btn-primary btn-icon">
+      <button (click)="toggleSidebar()" class="sidenav-toggle-button btn btn-primary btn-icon m-2">
         <ng-icon name="tablerMenu4" class="fs-22" />
       </button>
 
