--- a/client-osiris/src/assets/scss/_variables.scss
+++ b/client-osiris/src/assets/scss/_variables.scss
@@ -48,15 +48,15 @@ $grays: (
 // fusv-enable
 
 // scss-docs-start color-variables
-$blue:       #1c84c6;
+$blue:       #1B2735;
 $indigo:     #6b5eae;
 $purple:     #7b70ef;
 $pink:       #ff679b;
 $red:        #ed5565;
 $orange:     #fd7e14;
-$yellow:     #f8ac59;
+$yellow:     #CEB793;
 $green:      #0acf97;
-$teal:       #1ab394;
+$teal:       #448c74;
 $cyan:       #23c6c8;
 // scss-docs-end color-variables
 
