--- a/client-osiris/src/assets/scss/config/_theme-galaxy.scss
+++ b/client-osiris/src/assets/scss/config/_theme-galaxy.scss
@@ -71,8 +71,8 @@ $theme-galaxy-colors: (
 
         // Dark Left Sidebar
         &[data-menu-color="dark"] {
-            --#{$prefix}sidenav-bg:                     #23303c;
-            --#{$prefix}sidenav-border-color:           #23303c;
+            --#{$prefix}sidenav-bg:                     #1B2735;
+            --#{$prefix}sidenav-border-color:           #1B2735;
             --#{$prefix}sidenav-item-color:             #8495ab;
             --#{$prefix}sidenav-item-hover-color:       #bccee4;
             --#{$prefix}sidenav-item-hover-bg:          #2f3742;
