--- a/client-osiris/src/app/modules/main/components/sidenav/sidenav.component.html
+++ b/client-osiris/src/app/modules/main/components/sidenav/sidenav.component.html
@@ -2,8 +2,8 @@
 
   <a routerLink="/" class="logo">
     <span class="logo logo-light">
-      <span class="logo-lg"><img src="assets/images/logo.png" alt="logo"></span>
-      <span class="logo-sm"><img src="assets/images/logo-sm.png" alt="small logo"></span>
+      <span class="logo-lg"><img src="assets/images/logo/logo-jss.svg" alt="logo"></span>
+      <span class="logo-sm"><img src="assets/images/logo/logo-jss-sm.svg" alt="small logo"></span>
     </span>
 
     <span class="logo logo-dark">
