--- a/client-osiris/src/assets/scss/config/_theme-modern.scss
+++ b/client-osiris/src/assets/scss/config/_theme-modern.scss
@@ -81,8 +81,8 @@ $theme-modern-colors: (
 
         // Dark Left Sidebar
         &[data-menu-color="dark"] {
-            --#{$prefix}sidenav-bg:                     #23303c;
-            --#{$prefix}sidenav-border-color:           #23303c;
+            --#{$prefix}sidenav-bg:                     #1B2735;
+            --#{$prefix}sidenav-border-color:           #1B2735;
             --#{$prefix}sidenav-item-color:             #8495ab;
             --#{$prefix}sidenav-item-hover-color:       #bccee4;
             --#{$prefix}sidenav-item-hover-bg:          #2f3742;
