--- a/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
+++ b/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
@@ -29,8 +29,7 @@
     </table>
     <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="quotations" tableName="Devis"
       [noMaxHeight]="isForDashboard" [noPaddingBottom]="isForDashboard" [isSmallerHeight]="isForTiersIntegration"
-      *ngIf="displayedColumns && displayedColumns.length>0 " [displayTotalLines]="true"
-      (onRowClick)="chooseQuotation($event)">
+      *ngIf="displayedColumns && displayedColumns.length>0 " [displayTotalLines]="true">
     </sort-table>
   </div>
 </div>
