--- a/client-myjss/src/app/modules/my-account/components/edit-address/edit-address.component.html
+++ b/client-myjss/src/app/modules/my-account/components/edit-address/edit-address.component.html
@@ -86,7 +86,7 @@
                       <div class="mt-auto mb-auto">{{mail.mail}}</div>
                       <div>
                         <button type="button" class="btn btn-danger btn-icon btn-sm me-3" aria-label="Supprimer"
-                          placement="right" ngbTooltip="Supprimer" (click)="deleteMail(mail, document, true, false)">
+                          placement="right" ngbTooltip="Supprimer" (click)="deleteMail(mail, document, true)">
                           <i class="ai-cross"></i>
                         </button>
                       </div>
@@ -112,7 +112,7 @@
                       <div class="mt-auto mb-auto">{{mail.mail}}</div>
                       <div>
                         <button type="button" class="btn btn-danger btn-icon btn-sm me-3" aria-label="Supprimer"
-                          placement="right" ngbTooltip="Supprimer" (click)="deleteMail(mail, document, false, false)">
+                          placement="right" ngbTooltip="Supprimer" (click)="deleteMail(mail, document, false)">
                           <i class="ai-cross"></i>
                         </button>
                       </div>
@@ -132,7 +132,7 @@
                       <div>
                         <button type="button" class="btn btn-danger btn-icon btn-sm me-3" aria-label="Supprimer"
                           placement="right" ngbTooltip="Supprimer"
-                          (click)="deleteMail(document.reminderMail, document, false, true)">
+                          (click)="deleteMailReminder(document.reminderMail, document)">
                           <i class="ai-cross"></i>
                         </button>
                       </div>
@@ -198,7 +198,7 @@
                     <div class="mt-auto mb-auto">{{mail.mail}}</div>
                     <div>
                       <button type="button" class="btn btn-danger btn-icon btn-sm me-3" aria-label="Supprimer"
-                        placement="right" ngbTooltip="Supprimer" (click)="deleteMail(mail, document, true, false)">
+                        placement="right" ngbTooltip="Supprimer" (click)="deleteMail(mail, document, true)">
                         <i class="ai-cross"></i>
                       </button>
                     </div>
@@ -223,7 +223,7 @@
                     <div class="mt-auto mb-auto">{{mail.mail}}</div>
                     <div>
                       <button type="button" class="btn btn-danger btn-icon btn-sm me-3" aria-label="Supprimer"
-                        placement="right" ngbTooltip="Supprimer" (click)="deleteMail(mail, document, false, false)">
+                        placement="right" ngbTooltip="Supprimer" (click)="deleteMail(mail, document, false)">
                         <i class="ai-cross"></i>
                       </button>
                     </div>
