--- a/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
@@ -121,7 +121,7 @@
   (auxclick)=" createAccountingRecords($event)">
   <mat-icon>add</mat-icon>
 </button>
-<button matTooltip="Télécharger un relevé de comptes" mat-fab color="accent" class="second-fab-button"
+<button matTooltip="Télécharger un relevé de comptes" mat-fab color="accent" class="sixth-fab-button"
   *ngIf="tiersToDisplay || responsableToDisplay" (click)="downloadBillingClosureReceipt()">
   <mat-icon>download</mat-icon>
 </button>
