--- a/client/src/app/modules/dashboard/components/order-kaban/order-kaban.component.html
+++ b/client/src/app/modules/dashboard/components/order-kaban/order-kaban.component.html
@@ -16,6 +16,7 @@
 <div class="kanban-container top-container">
   <div *ngFor="let status of statusSelected" class="kanban-column">
     <h3 style="margin: 0px; text-align: center;"><span [matBadge]="status.id?getNumberOfEntitiesByStatus(status):0"
+        [matTooltip]="status.id?getNumberOfEntitiesByStatus(status)+'':'0'"
         [matBadgeHidden]="!status.id ||getNumberOfEntitiesByStatus(status)==0" matBadgePosition="after"
         matBadgeSize="small">{{ status.label }}</span></h3>
   </div>
