--- a/client/src/app/modules/dashboard/components/provision-kanban/provision-kanban.component.html
+++ b/client/src/app/modules/dashboard/components/provision-kanban/provision-kanban.component.html
@@ -36,6 +36,7 @@
 <div class="kanban-container top-container">
   <div *ngFor="let status of deduplicateArrayByLabel(statusSelected)" class="kanban-column">
     <h3 style="margin: 0px; text-align: center;"><span [matBadge]="getNumberOfEntitiesByStatus(status)"
+        [matTooltip]="getNumberOfEntitiesByStatus(status)+''"
         [matBadgeHidden]="!status.id || getNumberOfEntitiesByStatus(status)==0" matBadgePosition="after"
         matBadgeSize="small">{{ status.label }}</span></h3>
   </div>
