--- a/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
@@ -234,9 +234,9 @@
                         </button>
                       </div>
 
-                      <!-- Bloc : Adresse de facturation -->
+                      <!-- Bloc : Libellé de facturation -->
                       <div class="col-sm-6 col-lg-5" *ngIf="ordersInvoiceLabelResult[order.id]">
-                        <div class="fs-sm fw-medium text-dark mb-1">Adresse de facturation :</div>
+                        <div class="fs-sm fw-medium text-dark mb-1">Libellé de facturation :</div>
                         <div class="fs-sm">
                           {{ ordersInvoiceLabelResult[order.id].billingLabel }}<br>
                           {{ ordersInvoiceLabelResult[order.id].billingLabelAddress }}<br>
