--- a/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
@@ -212,9 +212,9 @@
                         </button>
                       </div>
 
-                      <!-- Bloc : Adresse de facturation -->
+                      <!-- Bloc : Libellé de facturation -->
                       <div class="col-sm-6 col-lg-5" *ngIf="quotationsInvoiceLabelResult[quotation.id]">
-                        <div class="fs-sm fw-medium text-dark mb-1">Adresse de facturation :</div>
+                        <div class="fs-sm fw-medium text-dark mb-1">Libellé de facturation :</div>
                         <div class="fs-sm">
                           {{ quotationsInvoiceLabelResult[quotation.id].billingLabel }}<br>
                           {{ quotationsInvoiceLabelResult[quotation.id].billingLabelAddress }}<br>
