--- a/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
+++ b/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
@@ -201,7 +201,7 @@
             <div class="col-md-6">
               <generic-input [(model)]="quotation.assoAffaireOrders[indexAsso].affaire.cedexComplement"
                 label="Complément d'adresse" [form]="idenficationForm" [propertyName]="'cedexComplement'+indexAsso"
-                [isMandatory]="true" [isDisabled]="false" [maxLength]="50">
+                [isMandatory]="false" [isDisabled]="false" [maxLength]="50">
               </generic-input>
             </div>
           </div>
