--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -11,6 +11,7 @@
         <autocomplete-post #autocomplePost [myJssCategory]="selectedMyJssCategory" [(model)]="searchText"
           label="Rechercher" [form]="practicalSheetsForm" propertyName="searchText" [isMandatory]="false"
           [isDisabled]="false" [isDisplayLabel]="false" (onFormChange)="searchForPosts()"
+          (onOptionSelected)="openPost($event.slug, $event)"
           (onChangeMyJssCategory)="getTopPosts($event)"></autocomplete-post>
       </div>
     </div>
@@ -47,7 +48,7 @@
         <div class="h-100">
           <div class="card border-0 bg-tertiary">
             <a (click)="openPost(post.slug,$event)">
-              <img class="card-img-top"
+              <img class="card-img-top" *ngIf="post.media "
                 [src]="post.media && post.media.urlMediumLarge ? post.media.urlMediumLarge : post.media.urlFull"
                 alt="Post image">
             </a>
@@ -107,7 +108,7 @@
       <div class="h-100">
         <div class="card border-0 bg-tertiary">
           <a (click)="openPost(post.slug,$event)">
-            <img class="card-img-top"
+            <img class="card-img-top" *ngIf="post.media "
               [src]="post.media && post.media.urlLarge ? post.media.urlLarge : post.media.urlFull" alt="Post image">
           </a>
           <div class="card-body pb-4">
