--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -421,7 +421,7 @@
           </a>
         </div>
         <div class="d-flex align-items-center pb-1 mb-2">
-          <h3 class="h6 mb-0 me-3">Adresse de facturation</h3>
+          <h3 class="h6 mb-0 me-3">Libellé de facturation</h3>
         </div>
         <div class="text-body-secondary fw-medium d-flex flex-wrap flex-sm-nowrap align-items-center my-1"
           *ngIf="orderMailComputeResult">
