--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -131,7 +131,7 @@
               </div>
             </div>
             <div class="col-md-auto col" *ngIf="service.confrereLabel">
-              <div class="fs-sm text-body-secondary">{{service.confrereLabel}}</div>
+              <div class="fs-sm text-body-secondary">'Annonce publiée sur ' + {{service.confrereLabel}}</div>
               <!-- TODO : ajouter le lien vers le SPEL jss ou autre-->
             </div>
             <div class="col-md-auto col justify-content-end d-flex">
