--- a/client-jss/src/app/main/components/footer/footer.component.html
+++ b/client-jss/src/app/main/components/footer/footer.component.html
@@ -78,10 +78,11 @@ Footer START -->
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;" (click)="openJoinUs($event)">Nous
                     rejoindre</a></li>
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
-                    (click)="openPartners($event)">Nos partenaires</a></li>
-                <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
                     (click)="openLegalMentions($event)">Mentions légales</a></li>
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;" (click)="openCgv($event)">CGV</a>
+                </li>
+                <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
+                    (click)="openPrivacyPolicy($event)">Politique de confidentialité</a>
                 </li>
               </ul>
             </div>
