--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -609,7 +609,7 @@ progress {
   margin-top: -0.9375rem;
   margin-bottom: 0.9375rem;
   font-size: 0.875em;
-  color: var(--ar-red);
+  color: var(--ar-blue-dark);
 }
 
 .blockquote-footer::before {
@@ -11883,7 +11883,7 @@ dl, ol, ul {
 
 blockquote {
   background: #f5f5f5;
-  border-left: 5px solid var(--ar-red);
+  border-left: 5px solid var(--ar-blue-dark);
   margin: 1.5em 10px;
   padding: 1em 10px;
   quotes: none;
