--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -8132,9 +8132,9 @@ fieldset:disabled .btn {
 
 .bg-container {
   background-color: var(--ar-primary-bg);
-  padding: 2rem;
-  margin-left: -2rem;
-  margin-right: -2rem;
+  padding: 1rem;
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 
 .bg-yellow {
@@ -8907,6 +8907,12 @@ fieldset:disabled .btn {
   .text-sm-center {
     text-align: center !important;
   }
+
+  .bg-container {
+    padding: 1rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -9558,6 +9564,12 @@ fieldset:disabled .btn {
 
   .text-md-center {
     text-align: center !important;
+  }
+
+  .bg-container {
+    padding: 1.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 }
 
@@ -10211,6 +10223,12 @@ fieldset:disabled .btn {
   .text-lg-center {
     text-align: center !important;
   }
+
+  .bg-container {
+    padding: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -10862,6 +10880,12 @@ fieldset:disabled .btn {
 
   .text-xl-center {
     text-align: center !important;
+  }
+
+  .bg-container {
+    padding: 2rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
   }
 }
 
