--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -81,8 +81,7 @@
       <nav class="navbar navbar-expand-lg text-uppercase text-white-100 d-none d-lg-flex">
         <div class="collapse navbar-collapse" id="main_nav">
           <ul class="navbar-nav me-auto">
-            <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle">île
-                de France </a>
+            <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle">Ile-de-France</a>
               <ul class="dropdown-menu">
                 <li> <a *ngFor="let department of departments" class="dropdown-item"
                     (click)="openDepartment(department,$event)">{{department.code.trim().length>0 &&
