--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -146,7 +146,7 @@
           <!-- Newsletter -->
           <div class="border border-light bg-newsletter card p-3 mb-3">
             <div class="wrapper">
-              <h3>Newletter</h3>
+              <h3>Newsletter</h3>
               <p>Recevez gratuitement un concentré d'actualité chaque semaine.</p>
               <form class="subscription-from">
                 <div class="input-group">
@@ -181,7 +181,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="section-title-block d-flex pb-3">
-                    <h3 class="section-widget-title">île-de-France</h3>
+                    <h3 class="section-widget-title">Ile-de-France</h3>
                     <a class="text-uppercase section-title-link" [routerLink]="'/post/department/'+idf.code">
                       Voir tous
                       <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
